added functionality to add food to cart

--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
         <h1>Jimmy's Diner</h1>
         <p>The best burgers and pizzas in town</p>
       </header>
-      <main id="main">
-        
+      <main>
+        <div id="food-menu"></div>
+        <div class="checkout" id="checkout">
+          <h2>Your order</h2>
+          <div class="checked-out" id="checked-out"></div>
+          <div class="total" id="total"></div>
+          <button>Complete order</button>
+        </div>
       </main>
 
     </div>
