--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </div>
     <!-- darken background when modal is active -->
     <div class="modal-overlay" id="modal-overlay"></div>
+    <!-- payment modal -->
     <div class="card-details-modal" id="card-details-modal">
       <h2>Enter card details</h2>
       <form action="" id="payment-form">
